# zxt-runtime-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/runtime_blog/: __init__.py  builder.py  cli.py  config.py  content_loader.py  diagram_renderer.py  markdown_renderer.py  media_assets.py  models.py  page_renderer.py  validator.py
static/css/: runtime.css
static/js/: analytics.js  mermaid-init.js  photos.js  runtime.js
templates/: 404.html  archive.html  article.html  base.html  category.html  home.html  page.html  photos.html  posts.html  tag.html
templates/components/: footer.html  header.html  mermaid-scripts.html  post-item.html
tests/: test_engine.py
